--- a/src/View/SanPham.fxml
+++ b/src/View/SanPham.fxml
@@ -20,7 +20,7 @@
    <children>
       <HBox fillHeight="false" layoutX="-7.0" prefHeight="651.0" prefWidth="625.0" spacing="10.0" stylesheets="@../css/SanPham.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox prefHeight="701.0" prefWidth="822.0" spacing="15.0" stylesheets="@../css/SanPham.css" HBox.hgrow="NEVER">
+            <VBox prefHeight="701.0" prefWidth="770.0" spacing="15.0" stylesheets="@../css/SanPham.css" HBox.hgrow="NEVER">
                <HBox.margin>
                   <Insets bottom="10.0" left="10.0" top="5.0" />
                </HBox.margin>
@@ -43,14 +43,14 @@
                         <Insets left="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <TableView fx:id="tblDSSP" maxHeight="-Infinity" prefHeight="637.0" prefWidth="811.0" styleClass="box-radius" stylesheets="@../css/SanPham.css">
+                  <TableView fx:id="tblDSSP" maxHeight="-Infinity" onMouseClicked="#tblDSSPMouseClicked" prefHeight="625.0" prefWidth="741.0" styleClass="box-radius" stylesheets="@../css/SanPham.css">
                     <columns>
                       <TableColumn fx:id="tcMaSP" prefWidth="90.0" resizable="false" text="Mã SP" />
-                      <TableColumn fx:id="tcTenSP" prefWidth="310.0" resizable="false" text="Tên SP" />
-                        <TableColumn fx:id="tcSoLuong" prefWidth="94.0" resizable="false" text="Số lượng" />
+                      <TableColumn fx:id="tcTenSP" prefWidth="330.0" resizable="false" text="Tên SP" />
+                        <TableColumn fx:id="tcSoLuong" prefWidth="107.0" resizable="false" text="Số lượng" />
                         <TableColumn fx:id="tcDonGia" prefWidth="130.0" resizable="false" text="Đơn giá" />
-                        <TableColumn fx:id="tcMaLoai" prefWidth="90.0" resizable="false" text="Mã loại" />
-                        <TableColumn fx:id="tcIMG" prefWidth="90.0" text="IMG" />
+                        <TableColumn fx:id="tcMaLoai" prefWidth="95.0" resizable="false" text="Mã loại" />
+                        <TableColumn fx:id="tcIMG" prefWidth="90.0" text="IMG" visible="false" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -69,7 +69,7 @@
                   <String fx:value="white-background" />
                </styleClass>
             </VBox>
-            <VBox alignment="TOP_CENTER" prefHeight="702.0" prefWidth="256.0" spacing="10.0" styleClass="white-background" stylesheets="@../css/SanPham.css">
+            <VBox alignment="TOP_CENTER" prefHeight="702.0" prefWidth="310.0" spacing="10.0" styleClass="white-background" stylesheets="@../css/SanPham.css">
                <children>
                   <VBox stylesheets="@../css/SanPham.css">
                      <children>
@@ -86,7 +86,7 @@
                                           <String fx:value="white-background" />
                                        </styleClass>
                                     </VBox>
-                                    <JFXButton fx:id="btnImportImage" graphicTextGap="10.0" maxHeight="-Infinity" minHeight="-Infinity" onAction="#btnImportImageMouseClicked" prefHeight="29.0" prefWidth="136.0" text="Tải ảnh lên">
+                                    <JFXButton fx:id="btnImportImage" disable="true" graphicTextGap="10.0" maxHeight="-Infinity" minHeight="-Infinity" onAction="#btnImportImageMouseClicked" prefHeight="29.0" prefWidth="136.0" text="Tải ảnh lên">
                                        <graphic>
                                           <ImageView fitHeight="15300.0" fitWidth="30.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -104,25 +104,25 @@
                               <VBox spacing="5.0" stylesheets="@../css/SanPham.css">
                                  <children>
                                     <Label text="Mã SP" />
-                                    <TextField fx:id="txtMaSP" maxWidth="-Infinity" prefHeight="26.0" prefWidth="270.0" VBox.vgrow="NEVER" />
+                                    <TextField fx:id="txtMaSP" prefHeight="26.0" prefWidth="270.0" VBox.vgrow="NEVER" />
                                  </children>
                               </VBox>
                               <VBox spacing="5.0">
                                  <children>
                                     <Label text="Tên SP" />
-                                    <TextField fx:id="txtTenSP" maxWidth="-Infinity" prefHeight="26.0" prefWidth="270.0" />
+                                    <TextField fx:id="txtTenSP" prefHeight="26.0" prefWidth="270.0" />
                                  </children>
                               </VBox>
                               <VBox spacing="5.0">
                                  <children>
                                     <Label text="Số lượng" />
-                                    <TextField fx:id="txtSoLuong" maxWidth="-Infinity" prefHeight="26.0" prefWidth="270.0" />
+                                    <TextField fx:id="txtSoLuong" prefHeight="26.0" prefWidth="270.0" />
                                  </children>
                               </VBox>
                               <VBox spacing="5.0">
                                  <children>
                                     <Label text="Đơn giá" />
-                                    <TextField fx:id="txtDonGia" maxWidth="-Infinity" prefHeight="26.0" prefWidth="270.0" />
+                                    <TextField fx:id="txtDonGia" prefHeight="26.0" prefWidth="270.0" />
                                  </children>
                               </VBox>
                               <VBox spacing="5.0">
@@ -130,7 +130,7 @@
                                     <Label text="Mã loại" />
                                     <HBox spacing="10.0">
                                        <children>
-                                          <TextField fx:id="txtMaLoai" maxWidth="-Infinity" prefHeight="26.0" prefWidth="203.0" />
+                                          <TextField fx:id="txtMaLoai" prefHeight="26.0" prefWidth="268.0" />
                                           <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="42.0">
                                              <graphic>
                                                 <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
@@ -139,6 +139,9 @@
                                                    </image>
                                                 </ImageView>
                                              </graphic>
+                                             <HBox.margin>
+                                                <Insets right="5.0" />
+                                             </HBox.margin>
                                           </Button>
                                        </children>
                                     </HBox>
