--- a/src/View/SanPham.fxml
+++ b/src/View/SanPham.fxml
@@ -5,6 +5,7 @@
 <?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,6 +15,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane fx:id="pnSanPham" prefHeight="715.2" prefWidth="1111.2" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPhamController">
@@ -38,6 +40,18 @@
                               </ImageView>
                            </children>
                         </HBox>
+                        <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                        <ImageView fx:id="btnReset" fitHeight="20.0" fitWidth="20.0" onMouseClicked="#btnResetMouseClicked" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../img/icons8-reset-32.png" />
+                           </image>
+                           <HBox.margin>
+                              <Insets right="8.0" />
+                           </HBox.margin>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </ImageView>
                      </children>
                      <VBox.margin>
                         <Insets left="10.0" />
