--- a/src/View/BanHang.fxml
+++ b/src/View/BanHang.fxml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="725.6" prefWidth="1111.2" stylesheets="@../css/BanHang.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BanHangController">
    <styleClass>
@@ -10,6 +22,161 @@
       <String fx:value="bottom-radius" />
    </styleClass>
    <children>
-      <HBox layoutX="47.0" layoutY="17.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <HBox layoutX="47.0" layoutY="17.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" stylesheets="@../css/BanHang.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <VBox prefHeight="715.0" prefWidth="687.0" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" />
+               </HBox.margin>
+               <styleClass>
+                  <String fx:value="white-background" />
+                  <String fx:value="box-radius" />
+                  <String fx:value="shadow-1" />
+               </styleClass></VBox>
+            <VBox prefHeight="715.0" prefWidth="332.0" spacing="5.0" stylesheets="@../css/BanHang.css" HBox.hgrow="NEVER">
+               <children>
+                  <VBox alignment="CENTER_LEFT" prefHeight="58.0" prefWidth="339.0" spacing="5.0" styleClass="header-gio-hang" stylesheets="@../css/BanHang.css">
+                     <children>
+                        <Label text="Đơn hàng mới #HD001">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="Cambria Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <HBox>
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin>
+                           <children>
+                              <Label text="Ngày lập: 05/07/2023">
+                                 <font>
+                                    <Font name="Cambria" size="15.0" />
+                                 </font>
+                              </Label>
+                              <Pane prefHeight="22.0" prefWidth="14.0" HBox.hgrow="ALWAYS" />
+                              <Label text="Nhân viên: NV001">
+                                 <font>
+                                    <Font name="Cambria" size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="63.0" prefWidth="334.0" stylesheets="@../css/BanHang.css">
+                     <styleClass>
+                        <String fx:value="shadw" />
+                        <String fx:value="white-background" />
+                     </styleClass>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <children>
+                        <VBox spacing="5.0" stylesheets="@../css/SanPham.css">
+                           <children>
+                              <Label text="Khách hàng" />
+                              <HBox spacing="5.0" VBox.vgrow="NEVER">
+                                 <children>
+                                    <TextField fx:id="txtMaSP" prefHeight="26.0" prefWidth="276.0" HBox.hgrow="ALWAYS" />
+                                    <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="42.0" HBox.hgrow="ALWAYS">
+                                       <graphic>
+                                          <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../img/icons8-open-64.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                           </children>
+                           <VBox.margin>
+                              <Insets left="5.0" right="5.0" />
+                           </VBox.margin>
+                           <padding>
+                              <Insets bottom="10.0" />
+                           </padding>
+                        </VBox>
+                     </children>
+                  </VBox>
+                  <VBox prefHeight="303.0" prefWidth="334.0" styleClass="white-background" stylesheets="@../css/BanHang.css">
+                     <children>
+                        <TableView fx:id="tblGioHang" prefHeight="247.0" prefWidth="298.0" stylesheets="@../css/BanHang.css">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="Mã SP" visible="false" />
+                            <TableColumn prefWidth="118.0" resizable="false" text="Tên SP" />
+                              <TableColumn prefWidth="60.0" resizable="false" text="   Số&#10;Lượng" />
+                              <TableColumn prefWidth="70.0" resizable="false" text="Đơn &#10; giá" />
+                              <TableColumn resizable="false" text="Thành &#10;  tiền" />
+                          </columns>
+                           <VBox.margin>
+                              <Insets bottom="8.0" top="8.0" />
+                           </VBox.margin>
+                           <styleClass>
+                              <String fx:value="box-radius" />
+                              <String fx:value="white-background" />
+                           </styleClass>
+                        </TableView>
+                     </children>
+                  </VBox>
+                  <Separator prefWidth="200.0">
+                     <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                     </padding>
+                  </Separator>
+                  <VBox prefHeight="200.0" prefWidth="100.0" stylesheets="@../css/BanHang.css">
+                     <styleClass>
+                        <String fx:value="shadow" />
+                        <String fx:value="white-background" />
+                        <String fx:value="box-radius" />
+                     </styleClass>
+                     <VBox.margin>
+                        <Insets left="8.0" right="8.0" />
+                     </VBox.margin>
+                     <children>
+                        <HBox alignment="CENTER" prefHeight="70.0" prefWidth="318.0">
+                           <children>
+                              <Label prefHeight="18.0" prefWidth="131.0" text="Tổng tiền (Tạm tính)" />
+                              <Pane prefHeight="200.0" prefWidth="56.0" HBox.hgrow="ALWAYS" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="49.0" text="30000" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="32.0" text="VNĐ" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="90.0" prefWidth="318.0">
+                           <children>
+                              <Label prefHeight="18.0" prefWidth="131.0" text="Khuyến mãi" />
+                              <Pane prefHeight="200.0" prefWidth="56.0" HBox.hgrow="ALWAYS" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="49.0" text="30000" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="32.0" text="VNĐ" />
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER" prefHeight="69.0" prefWidth="318.0">
+                           <children>
+                              <Label prefHeight="18.0" prefWidth="131.0" text="Tổng tiền " />
+                              <Pane prefHeight="200.0" prefWidth="56.0" HBox.hgrow="ALWAYS" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="49.0" text="30000" />
+                              <Label alignment="CENTER_RIGHT" prefHeight="18.0" prefWidth="32.0" text="VNĐ" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+               <HBox.margin>
+                  <Insets bottom="10.0" right="10.0" />
+               </HBox.margin>
+               <styleClass>
+                  <String fx:value="white-background" />
+                  <String fx:value="box-radius" />
+                  <String fx:value="shadow-1" />
+               </styleClass>
+            </VBox>
+         </children>
+         <styleClass>
+            <String fx:value="white-background" />
+            <String fx:value="bottom-radius" />
+         </styleClass>
+      </HBox>
    </children>
 </AnchorPane>
