--- a/src/View/BanHang.fxml
+++ b/src/View/BanHang.fxml
@@ -5,13 +5,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -31,7 +34,26 @@
                   <String fx:value="white-background" />
                   <String fx:value="box-radius" />
                   <String fx:value="shadow-1" />
-               </styleClass></VBox>
+               </styleClass>
+               <children>
+                  <HBox prefHeight="68.0" prefWidth="747.0" />
+                  <ScrollPane fx:id="scpMenu" prefHeight="646.0" prefWidth="747.0" stylesheets="@../css/BanHang.css" VBox.vgrow="ALWAYS">
+                     <content>
+                        <GridPane fx:id="grpMenu" prefHeight="36.0" prefWidth="38.0">
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </content>
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </VBox.margin>
+                     <styleClass>
+                        <String fx:value="transparent" />
+                        <String fx:value="shadow" />
+                     </styleClass>
+                  </ScrollPane>
+               </children></VBox>
             <VBox prefHeight="715.0" prefWidth="332.0" spacing="5.0" stylesheets="@../css/BanHang.css" HBox.hgrow="NEVER">
                <children>
                   <VBox prefHeight="122.0" prefWidth="332.0" spacing="10.0" styleClass="header-gio-hang" stylesheets="@../css/BanHang.css">
@@ -115,11 +137,11 @@
                      <children>
                         <TableView fx:id="tblGioHang" prefHeight="247.0" prefWidth="298.0" stylesheets="@../css/BanHang.css">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="Mã SP" visible="false" />
-                            <TableColumn prefWidth="118.0" resizable="false" text="Tên SP" />
-                              <TableColumn prefWidth="60.0" resizable="false" text="   Số&#10;Lượng" />
-                              <TableColumn prefWidth="70.0" resizable="false" text="Đơn &#10; giá" />
-                              <TableColumn resizable="false" text="Thành &#10;  tiền" />
+                            <TableColumn fx:id="tcMaSP" prefWidth="75.0" text="Mã SP" visible="false" />
+                            <TableColumn fx:id="tcTenSP" prefWidth="118.0" resizable="false" text="Tên SP" />
+                              <TableColumn fx:id="tcSoLuong" prefWidth="60.0" resizable="false" text="   Số&#10;Lượng" />
+                              <TableColumn fx:id="tcDonGia" prefWidth="70.0" resizable="false" text="Đơn &#10; giá" />
+                              <TableColumn fx:id="tcThanhTien" resizable="false" text="Thành &#10;  tiền" />
                           </columns>
                            <VBox.margin>
                               <Insets bottom="8.0" top="8.0" />
@@ -178,18 +200,9 @@
                               <Insets left="10.0" />
                            </VBox.margin>
                         </HBox>
-                        <HBox alignment="CENTER" prefHeight="107.0" prefWidth="332.0" VBox.vgrow="ALWAYS">
+                        <HBox alignment="CENTER" prefHeight="107.0" prefWidth="332.0" spacing="10.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <JFXButton alignment="CENTER" ellipsisString="" lineSpacing="15.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="41.0" prefWidth="136.0" ripplerFill="#c7c7c7" text="Thêm">
-                                 <graphic>
-                                    <ImageView fitHeight="15300.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../img/icons8-add-50.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                              </JFXButton>
-                              <JFXButton alignment="CENTER" ellipsisString="" graphicTextGap="15.0" lineSpacing="15.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="49.0" prefWidth="136.0" ripplerFill="#c7c7c7" styleClass="thanh-toan-btn" stylesheets="@../css/BanHang.css" text="Thanh toán">
+                              <JFXButton alignment="CENTER" ellipsisString="" graphicTextGap="15.0" lineSpacing="15.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" prefWidth="154.0" ripplerFill="#c7c7c7" styleClass="thanh-toan-btn" stylesheets="@../css/BanHang.css" text="Thanh toán">
                                  <graphic>
                                     <ImageView fitHeight="15300.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -197,6 +210,21 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </JFXButton>
+                              <JFXButton alignment="CENTER" ellipsisString="" graphicTextGap="15.0" lineSpacing="15.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" prefWidth="154.0" ripplerFill="#c7c7c7" styleClass="in-hoa-don-btn" stylesheets="@../css/BanHang.css" text="Hóa đơn">
+                                 <graphic>
+                                    <ImageView fitHeight="15300.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../img/icons8-receipt-80.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
                               </JFXButton>
                            </children>
                         </HBox>
