--- a/src/View/SanPham_Card.fxml
+++ b/src/View/SanPham_Card.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.SanPhamCard">
+<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPham_CardController">
    <children>
       <VBox alignment="CENTER" layoutX="29.0" layoutY="-65.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox>
+            <VBox alignment="CENTER">
                <children>
                   <HBox alignment="CENTER" prefHeight="43.0" prefWidth="200.0">
                      <children>
@@ -33,9 +33,9 @@
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                   </HBox>
-                  <Label fx:id="lblTenSP" text="Trà sữa Berry Berry">
+                  <Label fx:id="lblTenSP" alignment="CENTER" prefHeight="22.0" prefWidth="205.0" text="Trà sữa Berry Berry">
                      <VBox.margin>
-                        <Insets left="10.0" />
+                        <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                      <font>
                         <Font name="Cambria" size="18.0" />
@@ -43,7 +43,7 @@
                   </Label>
                </children>
             </VBox>
-            <ImageView fx:id="imgSanPham" fitHeight="142.0" fitWidth="161.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgSanPham" fitHeight="142.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/SanPham/Trà%20sữa%20Berry%20Berry.png" />
                </image>
