--- a/src/View/SanPham_Card.fxml
+++ b/src/View/SanPham_Card.fxml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPham_CardController">
+<AnchorPane prefHeight="210.0" prefWidth="200.0" stylesheets="@../css/SanPham_Card.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPham_CardController">
    <children>
-      <VBox alignment="CENTER" layoutX="29.0" layoutY="-65.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="CENTER" layoutX="29.0" layoutY="-65.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox alignment="CENTER">
                <children>
                   <HBox alignment="CENTER" prefHeight="43.0" prefWidth="200.0">
                      <children>
-                        <Label fx:id="lblMaSP" prefHeight="22.0" prefWidth="91.0" text="SP001">
+                        <Label fx:id="lblMaSP" prefHeight="22.0" prefWidth="65.0" text="SP001" HBox.hgrow="ALWAYS">
                            <font>
                               <Font name="Cambria" size="17.0" />
                            </font>
                         </Label>
-                        <Label fx:id="lblDonGia" prefHeight="19.0" prefWidth="94.0" text="45000 VNĐ">
+                        <Pane prefHeight="34.0" prefWidth="55.0" HBox.hgrow="ALWAYS" />
+                        <Label fx:id="lblDonGia" contentDisplay="RIGHT" prefHeight="19.0" prefWidth="94.0" text="45000 VNĐ" HBox.hgrow="ALWAYS">
                            <font>
                               <Font name="Cambria Bold" size="16.0" />
                            </font>
@@ -43,12 +46,19 @@
                   </Label>
                </children>
             </VBox>
-            <ImageView fx:id="imgSanPham" fitHeight="142.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="imgSanPham" fitHeight="145.0" fitWidth="148.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/SanPham/Trà%20sữa%20Berry%20Berry.png" />
                </image>
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
             </ImageView>
          </children>
       </VBox>
    </children>
+   <styleClass>
+      <String fx:value="card" />
+      <String fx:value="shadow" />
+   </styleClass>
 </AnchorPane>
