--- a/src/View/BanHang.fxml
+++ b/src/View/BanHang.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
@@ -53,11 +54,66 @@
                         <String fx:value="shadow" />
                      </styleClass>
                   </ScrollPane>
-                  <HBox prefHeight="167.0" prefWidth="747.0" stylesheets="@../css/BanHang.css" VBox.vgrow="ALWAYS">
+                  <HBox alignment="CENTER_LEFT" prefHeight="167.0" prefWidth="747.0" spacing="15.0" stylesheets="@../css/BanHang.css" VBox.vgrow="ALWAYS">
                      <styleClass>
                         <String fx:value="bottom-radius" />
                         <String fx:value="white-background" />
                      </styleClass>
+                     <children>
+                        <HBox alignment="CENTER" fillHeight="false" minHeight="-Infinity" prefHeight="159.0" prefWidth="166.0" stylesheets="@../css/SanPham_Card.css">
+                           <children>
+                              <ImageView fitHeight="144.0" fitWidth="144.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/SanPham/Hồng%20trà%20đào%20sữa.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                           <styleClass>
+                              <String fx:value="shadow-1" />
+                              <String fx:value="white-background" />
+                           </styleClass>
+                           <HBox.margin>
+                              <Insets bottom="5.0" top="5.0" />
+                           </HBox.margin>
+                        </HBox>
+                        <VBox prefHeight="169.0" prefWidth="383.0">
+                           <children>
+                              <HBox>
+                                 <children>
+                                    <Label text="Label" />
+                                    <TextField />
+                                 </children>
+                              </HBox>
+                              <HBox>
+                                 <children>
+                                    <Label text="Label" />
+                                    <TextField />
+                                 </children>
+                              </HBox>
+                              <HBox>
+                                 <children>
+                                    <Label text="Label" />
+                                    <TextField />
+                                 </children>
+                              </HBox>
+                              <HBox>
+                                 <children>
+                                    <Label text="Label" />
+                                    <TextField />
+                                 </children>
+                              </HBox>
+                              <HBox>
+                                 <children>
+                                    <Label text="Label" />
+                                    <TextField />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" />
+                     </VBox.margin>
                   </HBox>
                </children></VBox>
             <VBox prefHeight="715.0" prefWidth="332.0" spacing="5.0" stylesheets="@../css/BanHang.css" HBox.hgrow="NEVER">
