set Spinner tùy thuộc vào lượng hàng tồn kho

--- a/src/css/BanHang.css
+++ b/src/css/BanHang.css
@@ -141,3 +141,10 @@
     -fx-font-size: 15;
     -fx-font-weight: BOLD;
 }
+
+#vbSoLuongCanThem .label{
+    -fx-font-weight: BOLD;
+    -fx-font-family: Cambria;
+    -fx-font-size: 15;
+}
+
