--- a/src/View/BanHang.fxml
+++ b/src/View/BanHang.fxml
@@ -118,10 +118,10 @@
                         </Separator>
                         <VBox alignment="CENTER" prefHeight="205.0" prefWidth="255.0" spacing="15.0">
                            <children>
-                              <VBox prefHeight="98.0" prefWidth="240.0">
+                              <VBox fx:id="vbSoLuongCanThem" alignment="CENTER_LEFT" prefHeight="98.0" prefWidth="240.0" spacing="10.0">
                                  <children>
-                                    <Label text="Label" />
-                                    <Spinner />
+                                    <Label text="Nhập số lượng" />
+                                    <Spinner fx:id="spnSoLuong" editable="true" prefHeight="26.0" prefWidth="158.0" />
                                  </children>
                               </VBox>
                               <JFXButton fx:id="btnThemVaoGio" alignment="CENTER" ellipsisString="" graphicTextGap="15.0" lineSpacing="15.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" prefWidth="167.0" ripplerFill="#c7c7c7" styleClass="them-vao-gio-btn" stylesheets="@../css/BanHang.css" text="Thêm vào giỏ">
