--- a/src/css/SanPham_Card.css
+++ b/src/css/SanPham_Card.css
@@ -7,3 +7,8 @@
 .shadow {
     -fx-effect: dropShadow(three-pass-box, rgba(0, 0, 0, 0.1), 10.0, 0.0, 0.0, 10.0);
 }
+
+.card:hover{
+    -fx-opacity: 0.9;
+    -fx-effect: dropShadow(three-pass-box,rgba(0,0,0,0.5),5,0,0,0);
+}
