--- a/src/View/SanPham_Card.fxml
+++ b/src/View/SanPham_Card.fxml
@@ -41,7 +41,7 @@
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                      <font>
-                        <Font name="Cambria" size="18.0" />
+                        <Font name="Segoe UI Light" size="18.0" />
                      </font>
                   </Label>
                </children>
