--- a/src/View/SanPham_Card.fxml
+++ b/src/View/SanPham_Card.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMousePressed="#SPMouseClicked" prefHeight="210.0" prefWidth="200.0" stylesheets="@../css/SanPham_Card.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPham_CardController">
+<AnchorPane onMousePressed="#SPMouseClicked" prefHeight="210.0" prefWidth="200.0" stylesheets="@../css/SanPham_Card.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SanPham_CardController">
    <children>
       <VBox alignment="CENTER" layoutX="29.0" layoutY="-65.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -41,7 +41,7 @@
                         <Insets left="10.0" right="10.0" />
                      </VBox.margin>
                      <font>
-                        <Font name="Segoe UI Light" size="18.0" />
+                        <Font name="Cambria" size="18.0" />
                      </font>
                   </Label>
                </children>
