--- a/src/css/BanHang.css
+++ b/src/css/BanHang.css
@@ -1,3 +1,4 @@
+
 .white-background{
     -fx-background-color: #fff;
 }
@@ -33,6 +34,7 @@
 
 .table-view .column-header .label {
     -fx-padding: 5;
+    -fx-font-family: Cambria;
     -fx-font-weight: bold;
     -fx-font-size: 14px;
 
@@ -60,13 +62,9 @@
     -fx-background-color: linear-gradient(to bottom, #fff, #FFF7D4, #FFEBA3, #FFDE72);
     -fx-background-radius: 0 0 15 15 ;
 }
-
-
 .header-tthd .label{
     -fx-font-family: Cambria;
-    /*-fx-font-weight: BOLD;*/
     -fx-font-size: 15px;
-
 }
 
 .thanh-toan-btn{
